# brownfield-cartographer

./: .gitignore  README.md  RECONNAISSANCE.md  TRP1_challenge_week4_the_brownfield_cartographer.md  pyproject.toml  streamlit_app.py
.cartography/: blind_spots.md  cartography_trace.jsonl  high_risk_areas.md  hydrologist_stats.json  lineage_graph.html  surveyor_stats.json  unresolved_references.json
.cartography/brownfield-cartographer-phase12/: blind_spots.json  cartography_trace.jsonl  high_risk_areas.json
.cartography/data_lineage/: hydrologist_stats.json  lineage_graph.html  lineage_graph.json
.cartography/jaffle-shop/: CODEBASE.md  blind_spots.json  cartography_trace.jsonl  high_risk_areas.json  module_graph.json  module_graph_modules.json  onboarding_brief.md  semantic_hotspots.json  surveyor_stats.json
.cartography/jaffle-shop-phase12/: blind_spots.json  cartography_trace.jsonl  high_risk_areas.json
.cartography/module_graph/: module_graph.json  module_graph_modules.json  surveyor_stats.json
.cartography/roo-code/: CODEBASE.md  blind_spots.json  cartography_trace.jsonl  high_risk_areas.json  onboarding_brief.md  semantic_hotspots.json
.cartography/self-test/: cartography_trace.jsonl  module_graph.json  module_graph_modules.json  surveyor_stats.json
.streamlit/: config.toml
report/: phase1.md  phase2.md
reports/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  semantic_review_queue.md
src/: __init__.py  cli.py  orchestrator.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/llm/: __init__.py  (+3 more)
tests/: test_git_tools.py  test_phase1_phase2.py  test_phase1_phase2_rubric.py  test_phase3_semantics.py  test_phase4_navigation.py  test_phase5_dashboard.py
(+75 files in other folders)
